# corrode

./: Cargo.toml
assets/: footer.css  header.css  new.css
assets/css/: new.css
src/: lib.rs  main.rs
src/error/: mod.rs  parse.rs
src/middleware/: mod.rs
src/parsing/: frontmatter.rs  mod.rs
src/routes/: get_page.rs  http_error.rs  mod.rs  serve_dir.rs  serve_page.rs
src/web/: mod.rs
templates/: error_page.html  page.html
