[package]
name = "corrode"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "corrode"
path = "src/bin/corrode.rs"

[[bin]]
name = "t"
path = "src/bin/t.rs"

[dependencies]
anyhow = "1"
askama = { version = "0.12", features = ["markdown"] }
axum = { version = "0.6", features = ["headers"] }
chrono = { version = "0.4", features = ["serde"] }
convert_case = "0.6"
hyper = "0.14"
ignore = "0.4"
mime = "0.3"
nom = "7"
nom_locate = "4"
serde = { version = "1", features = ["derive"] }
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "full"] }
tokio-util = { version = "0.7", features = ["io"] }
toml = "0.7"
tower-http = { version = "0.4", features = ["cors"] }
